# Wheelchair-Tennis-Robot

./: Gemfile  README.md  _config.yml  index.markdown
software/ball_calibration/: CMakeLists.txt  README.md  package.xml
software/ball_calibration/config/: ball_ekf_localization.yaml  camera_calibration_auto.yaml  jetson_ball_detection.yaml
software/ball_calibration/config/apriltag/: old_tags.yaml  settings.yaml  tags.yaml
software/ball_calibration/config/calibrations/: camera_calibration_auto copy 2.yaml  camera_calibration_auto_apr12.yaml  camera_calibration_auto_default.yaml  camera_calibration_auto_default1.yaml  camera_calibration_auto_feb_16_solo.yaml  camera_calibration_auto_first.yaml  camera_calibration_auto_full.yaml  camera_calibration_auto_lab_demo.yaml  camera_calibration_auto_mar31.yaml  camera_calibration_auto_mar_3.yaml  camera_calibration_auto_other_side.yaml
software/ball_calibration/config/zed/: common.yaml  common_HD720.yaml  zed2.yaml
software/ball_calibration/launch/: ball_localization.launch  box_cameras.launch  record_bag.launch  record_eval_bag.launch  standalone_apriltag.launch  standalone_cameras.launch
software/ball_calibration/launch/jetson_calib/: jetson_apriltag_multi.launch  jetson_apriltag_single.launch  jetson_autogain_multi.launch  jetson_ball_detection_multi.launch  jetson_record_calib.launch
software/ball_calibration/launch/zed_urdf/: zed_urdf.launch  zed_urdf_auto.launch
software/ball_calibration/models/: tennis_ball.urdf  zed_descr.urdf.xacro  zed_descr_auto.urdf.xacro
software/ball_calibration/models/include/: materials.urdf.xacro
software/ball_calibration/rviz/: apriltag.perspective  apriltag.rviz  ball_detection.perspective
software/ball_calibration/scripts/: detection_covarage.py  evaluate_rollout_dataset.py  evalute_rollout.py  hsv_threshold.py  transform_measurements.py  zed_calibration.py
software/ball_detection/: CMakeLists.txt  README.md  package.xml
software/ball_detection/config/: settings.yaml
software/ball_detection/launch/: ball_detection.launch
software/ball_detection/src/: ball_detection.cpp  shelf-pack.hpp
software/ball_localization/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
software/ball_localization/doc/: Makefile  conf.py  configuring_robot_localization.rst  index.rst  integrating_gps.rst  manifest.yaml  migrating_from_robot_pose_ekf.rst  navsat_transform_node.rst  preparing_sensor_data.rst  state_estimation_nodes.rst  user_contributed_tutorials.rst
software/ball_localization/doc/.templates/: full_globaltoc.html
software/ball_localization/doc/images/: navsat_transform_workflow.tex
software/ball_localization/include/ball_localization/: ball_ekf.h  ball_filter_base.h  ball_ukf.h  (+9 more)
software/ball_localization/launch/: dual_ekf_navsat_example.launch  ekf_nodelet_template.launch  ekf_template.launch  navsat_transform_template.launch  ukf_template.launch
software/ball_localization/params/: dual_ekf_navsat_example.yaml  ekf_template.yaml  navsat_transform_template.yaml  ukf_template.yaml
software/ball_localization/src/: ball_ekf.cpp  ball_ekf_localization_node.cpp  ball_ekf_localization_nodelet.cpp  ball_filter_base.cpp  ball_filter_utilities.cpp  ball_localization_estimator.cpp  ball_localization_listener_node.cpp  ball_navsat_transform.cpp  ball_navsat_transform_node.cpp  ball_navsat_transform_nodelet.cpp  ball_rollout.cpp  ball_ukf.cpp  ball_ukf_localization_node.cpp  ball_ukf_localization_nodelet.cpp  ros_ball_filter.cpp  ros_ball_filter_utilities.cpp  ros_ball_localization_listener.cpp
software/ball_localization/srv/: SetUTMZone.srv
software/wam_control/: CMakeLists.txt  README.md  package.xml
software/wam_control/config/: arm_controller_5DOF.yaml  arm_controller_7DOF.yaml  joint_limits.yaml
software/wam_control/launch/: sim_arm_controller.launch  trajectory_profiler.launch
software/wam_control/scripts/: end_effector_speed.py  end_effector_xyz_catapult.npy  end_effector_xyz_pingpong_real.npy  joint_positions_catapult.npy  joint_positions_pingpong.npy  plot_trapezoidal_traj.py  rackethead_speed.npy  timestamps_catapult.npy  timestamps_pingpong.npy  timestamps_pingpong_real.npy  trapezoidal_trajs_npy.npy
software/wam_control/src/: ee_speed.py  swing_boi.py  swing_boi_max_point.py
software/wam_control/srv/: LinearSwing.srv  Swing.srv  TrajectoryProfiler.srv
software/wam_model/: CMakeLists.txt  README.md  package.xml
software/wam_model/models/: arm.urdf.xacro  common.urdf.xacro  components.urdf.xacro
software/wam_model/robots/: wam5_solo.urdf  wam7.urdf  wam7.urdf.xacro  wam7_solo.urdf.xacro
software/wtr_navigation/: CMakeLists.txt  README.md  package.xml
software/wtr_navigation/config/: common_zed_wheelchair.yaml  localization.yaml  localization_global.yaml  localization_local.yaml  localization_sim.yaml  teb_server.yaml
software/wtr_navigation/launch/: amcl_wc_lab.launch  hdl_graph_slam.launch  hdl_localization.launch  move_base.launch  navigation.launch  octomap.launch  pid_wheels.launch  velodyne.launch  wheelchair_driver.launch  zed_wheelchair.launch
software/wtr_navigation/scripts/: 1d_planner.py  move_to_point.py  pid_wheels.py  test_teb_response.py
software/wtr_navigation/srv/: TebPlans.srv
software/wtr_plan/: CMakeLists.txt  README.md  package.xml
software/wtr_plan/launch/: demo_court.launch  demo_court_vis.launch  demo_lab.launch  demo_lab_drive.launch  demonstration.launch  demostration.launch  new_ball_launcher_data.launch  rviz.launch  strategizer.launch  strategizer1.launch
software/wtr_plan/rviz/: courts.rviz  courts_drive.rviz  courts_vision.rviz  lab.rviz  lab_drive.rviz  vision.rviz
software/wtr_plan/src/: lab_intercept.py  lab_intercept1.py  test_hit_ball_static.py  test_hit_ball_static1.py
software/wtr_sim/: CMakeLists.txt  README.md  package.xml
software/wtr_sim/config/: transmission_control.yaml
software/wtr_sim/launch/: wam_gazebo.launch
software/wtr_sim/materials/: tennisCourt.material
software/wtr_sim/scripts/: ball_sim.py
software/wtr_sim/worlds/: tennis_court.world
(+156 files in other folders)
