<?xml version="1.0"?>
<package format="2">
  <name>ball_detection</name>
  <version>3.1.0</version>
  <description>
   Vision
  </description>

  <maintainer email="dmartin99@gatech.edu">Daniel Martin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
